Initial secundary structure is now cleared from memory